--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,9 +14,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 80px;
-    max-width: 1500px;
+    /* max-width: 1500px; */
   }
   
   .nav-logo {
@@ -75,7 +75,7 @@
     display: none;
   }
   
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 760px) {
     .nav-menu {
       display: flex;
       flex-direction: column;
